syntax = "proto3";

option csharp_namespace = "Harmony.Api.Protos";

import "google/protobuf/any.proto";

message CardFilterRequest {
	string cardId = 1;
	bool Attachments  = 2;
    bool BoardList  = 3;
    bool Board  = 4;
    bool IssueType = 5;
    bool Children = 6;
    bool Members = 7;
}

message MoveCardToListRequest {
    string cardId = 1;
    string boardListId = 2;
}

message MoveCardToListResponse {
    bool success = 1;
    int32 newPosition = 2;
    string error = 3;
}

message Card {
	string cardId = 1;
    string title = 2;
    string boardListId = 3;
    int32 position = 4;
    string boardTitle = 5;
    bool isCompleted = 6;
    repeated Card children = 7;
    repeated string members = 8;
}

message CardResponse {
    bool found = 1;
    Card card = 2;
}

service CardService {
  // returns a Card
  rpc GetCard (CardFilterRequest) returns (CardResponse);
  rpc MoveCardToList (MoveCardToListRequest) returns (MoveCardToListResponse);
}
